# simple-to-do-manager-cli

./: Cargo.toml  README.md  tasks.json
src/: lib.rs  main.rs  task.rs  todo_list.rs
